# cpp_starter_template

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  configure.sh  format_files.sh
.github/workflows/: cmake-conan.yml
CMake/: CompilerWarnings.cmake
src/: CMakeLists.txt  example.cpp  main.cpp
src/inc/: example.h  example.hpp
test/: CMakeLists.txt  test_example.cpp  test_main.cpp
test/inc/: test_common.hpp
